fix: enum recorder injection + constructor super() ordering (NT)
Two bugs found during real-world validation on northfox project (Java 24, 191 files):

1. Simple enums (constants only, no methods) got recorder injected before
   closing brace without semicolon separator — invalid Java. Now skip
   recorder for enums without methods/constructors. (clover-maven-plugin-cmp.19.5)

2. Constructor R.inc() inserted before super()/this() call — illegal
   without --enable-preview (flexible constructors JEP). New
   injectConstructorEntry() detects explicit super()/this() and inserts
   R.inc() AFTER it. (clover-maven-plugin-cmp.19.4)

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>